[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/ui/advisor_panel.gd" id="1"]

[node name="AdvisorPanel" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -150.0
offset_right = 175.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleBar" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBox/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "City Advisors"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="MarginContainer/VBox/TitleBar"]
layout_mode = 2
text = "X"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBox"]
custom_minimum_size = Vector2(300, 220)
layout_mode = 2
size_flags_vertical = 3

[node name="AdviceContainer" type="VBoxContainer" parent="MarginContainer/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
